# File_Sync

./: .gitignore  FileSync.sln
FileSync_Client/: FileSync_Client.vcxproj
FileSync_Linux/: CMakeLists.txt
FileSync_Linux/src/Client/: CMakeLists.txt  client.cpp
FileSync_Linux/src/Server/: CMakeLists.txt  server.cpp
FileSync_Linux/src/Utils/: CMakeLists.txt  utils.cpp  utils.h
FileSync_Proj/: Client.cpp  FileSync_Proj.vcxproj
FileSync_Proj/src/: Client.cpp
FileSync_Server/: FileSync_Server.vcxproj
FileSync_Server/src/: Server.cpp
FileSync_Windows/FileSync_Client/src/: Client.cpp
FileSync_Windows/FileSync_Server/: FileSync_Server.vcxproj
FileSync_Windows/FileSync_Server/src/: Server.cpp
FileSync_Windows/NetworkUtils/src/: Utils.h
NetworkUtils/: NetworkUtils.vcxproj  NetworkUtils.vcxproj.filters
NetworkUtils/src/: Utils.cpp  Utils.h
